fixed margin for overflowing video

--- a/frontend_practice/Ableton_Page/Live_page/styles.css
+++ b/frontend_practice/Ableton_Page/Live_page/styles.css
@@ -35,6 +35,7 @@ main{
     justify-content: space-evenly;
     height: 5vh;
     font-size: 1vh;
+    overflow: hidden;
 }
 
 @media only screen and (min-width: 350px){
@@ -137,7 +138,7 @@ main{
         height: 30vh;
 
     }
-    #video video, img{
+    #video video{
         width: 100%;
         margin-bottom: 10px;
     }
